# knowledge-tree

./: .gitignore  FEATURE_REFERENCE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/knowledge_tree/: __init__.py  _yaml_helpers.py  cli.py  engine.py  git_ops.py  models.py  registry_source.py
src/knowledge_tree/builtins/: __init__.py  kt-propose.md  kt-reference.md
src/knowledge_tree/exporters/: __init__.py  claude_code.py  roo_code.py
tests/: conftest.py  test_cli.py  test_engine.py  test_export_cli.py  test_exporters.py  test_git_ops.py  test_models.py  test_registry_source.py  test_wire.py
workspace/sample-registry/: CONTRIBUTING.md  registry.yaml
