[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# NOTE: Do NOT publish from this repo. Use scripts/publish-release.sh
# to push releases to the public kBisla9/knowledge-tree repo.
name = "knowledge-tree"
version = "0.3.2"
description = "A crowdsourced knowledge management system for AI agent context"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Kulvinder Bisla"},
]
keywords = ["knowledge", "ai", "agents", "cli", "git"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "ruamel.yaml>=0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.scripts]
kt = "knowledge_tree.cli:cli"
knowledge-tree = "knowledge_tree.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"knowledge_tree.builtins" = ["*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=knowledge_tree --cov-report=term-missing --cov-report=xml"

[tool.ruff]
target-version = "py310"
line-length = 99

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["knowledge_tree"]
